--- a/docs/10_card/css/card.css
+++ b/docs/10_card/css/card.css
@@ -2,31 +2,39 @@
     --cp_card-minw: min(80vw, 290px);
     --cp_card-maxw: 800px;
     --cp_card-padding: 16px;
+    
     --cp_card-shadow: 0px 2px 3px rgba(0, 0, 0, 0.1);
-    --cp_card-shadowh1: 0px 6px 8px rgba(0, 0, 0, 0.1);
-    --cp_card-shadowh2: 0px 6px 30px rgba(0, 0, 0, 0.15);
+    --cp_card-shadow2: 0px 4px 12px rgba(0, 0, 0, 0.2);
+    --cp_card-shadow3: 0px 20px 40px rgba(0, 0, 0, 0.3);
+    --cp_card-shadow-ho-inner: 0px 6px 8px rgba(0, 0, 0, 0.1);
+    --cp_card-shadow-ho-outter: 0px 6px 30px rgba(0, 0, 0, 0.15);
+    --cp_card-shadow3-ho: 6px 6px 0px 0px var(--nv-9-5-99), 0px 0px 0px 2px var(--nv-9-5-99);
     --boxshadow-card: 0px 2px 3px rgba(0, 0, 0, 0.1);
     --cp_card-glassbg: rgba(255, 255, 255, 0.8);
     --cp_card-glassgradient: linear-gradient(to bottom right, rgba(0, 0, 0, 0) 0% 2%, rgba(0, 0, 0, 0.4) 15%, rgba(0, 0, 0, 0) 35% 70%, rgba(0, 0, 0, 0.2) 85%, rgba(0, 0, 0, 0) 100%);
     /*    --cp_card-glassgradient: linear-gradient(to bottom right, rgba(118, 185, 0, 0) 0% 2%, rgba(118, 185, 0, 0.8) 15%, rgba(118, 185, 0, 0) 35% 70%, rgba(118, 185, 0, 0.4) 85%, rgba(118, 185, 0, 0) 100%);*/
     --white: #ffffff;
+    
     --swap-layout: block;
     --swap-asepct: 16 / 9;
-    
+
 
 }
+
 .whitesection {
+    --cp_card-shadow: 0px 2px 3px rgba(0, 0, 0, 0.2);
+    --cp_card-shadow-ho-inner: 0px 10px 14px rgba(0, 0, 0, 0.2);
+    --cp_card-shadow-ho-outter: 0px 10px 40px rgba(0, 0, 0, 0.15);
     --cp_card-glassbg: rgba(247, 247, 247, 0.8);
-     --nv-16: var(--nv-15-5-f7);
 }
 
 
 @media screen and (min-width: 640px) {
     :root {
         --cp_card-padding: 20px;
-        --4col: repeat(2, 1fr);
+        --3col: repeat(2, 1fr);
         --2col: repeat(2, 1fr);
-         --align-lines-p: 7;
+        --align-lines-p: 7;
         --align-lines-h4: 3;
         --align-lines-lead: 2;
     }
@@ -35,7 +43,7 @@
 @media screen and (min-width: 1024px) {
     :root {
         --cp_card-padding: 24px;
-        --4col: repeat(3, 1fr);
+        --3col: repeat(3, 1fr);
         --align-lines-lead: 3;
     }
 }
@@ -44,11 +52,10 @@
     :root {
 
         --cp_card-padding: 32px;
-        /*--4col: repeat(4, 1fr);*/
         --swap-layout: flex;
         --swap-asepct: unset;
         --swap-imgw: 33%;
-         --align-lines-p: 5;
+        --align-lines-p: 5;
         --align-lines-lead: 2;
     }
 }
@@ -59,8 +66,11 @@
     :root {
 
         --cp_card-shadow: 0px 2px 3px rgba(0, 0, 0, 0.5);
-        --cp_card-shadowh1: 0px 6px 8px rgba(0, 0, 0, 0.5);
-        --cp_card-shadowh2: 0px 6px 30px rgba(0, 0, 0, 0.75);
+        --cp_card-shadow2: 0px 4px 12px rgba(0, 0, 0, 0.6);
+        --cp_card-shadow3: 0px 20px 40px rgba(0, 0, 0, 0.7);
+        --cp_card-shadow-ho-inner: 0px 6px 8px rgba(0, 0, 0, 0.5);
+        --cp_card-shadow-ho-outter: 0px 6px 30px rgba(0, 0, 0, 0.75);
+        --cp_card-shadow3-ho: 6px 6px 0px 0px rgba(0, 0, 0), 0px 0px 0px 2px rgba(0, 0, 0);
         --boxshadow-card: 0px 2px 3px rgba(0, 0, 0, 0.5);
         --cp_card-glassbg: rgba(34, 34, 34, 0.8);
         --cp_card-glassgradient: linear-gradient(to bottom right, rgba(255, 255, 255, 0) 0% 2%, rgba(255, 255, 255, 0.6) 15%, rgba(255, 255, 255, 0) 35% 70%, rgba(255, 255, 255, 0.3) 85%, rgba(255, 255, 255, 0) 100%);
@@ -73,7 +83,7 @@
         --nv-12-5-cc: #333333;
 
         --nv-9-5-99: #666666;
-
+        --nv-6-5-66: #999999;
         --nv-3-33: #CCCCCC;
         --nv-2-22: #DDDDDD;
         --nv-1-5-1a: #EEEEEE;
@@ -86,10 +96,11 @@
         --nv-16: #ffffff;
         --nv-0: #000000;
     }
+
     .whitesection {
-    --cp_card-glassbg: rgba(34, 34, 34, 0.8);
-     --nv-16: #222222;
-}
+        --cp_card-glassbg: rgba(34, 34, 34, 0.8);
+        --nv-16: #222222;
+    }
 }
 
 body {
@@ -113,10 +124,10 @@ body > *:nth-child(even) {
     background-color: var(--white);
 }
 
-/*===============layout =============*/
+/*=============== page layout =============*/
 section > ul {
     display: grid;
-    grid-template-columns: var(--4col);
+    grid-template-columns: var(--3col);
     grid-gap: var(--cp_card-padding);
     align-items: start;
 }
@@ -131,19 +142,26 @@ section > ul {
     break-inside: avoid;
     margin-bottom: var(--cp_card-padding);
 }
+
 section:nth-of-type(5) > ul {
     grid-template-columns: var(--2col);
     align-items: normal;
 }
+
+section > h3 {
+    margin-bottom: var(--sp_em-xxxl);
+}
+
 section > h4 {
     margin: var(--sp_em-xxxl) 0 var(--sp_em-l);
 }
-/*================cp_card base ===================*/
+
+/*================cp_card base size space ===================*/
 
 .cp_card_base {
     min-width: var(--cp_card-minw);
     max-width: var(--cp_card-maxw);
-    cursor: pointer;
+/*    cursor: pointer;*/
 }
 
 .cp_card_base img {
@@ -155,41 +173,56 @@ section > h4 {
     padding: var(--cp_card-padding);
 }
 
+.borderpadding {
+    padding: calc(var(--cp_card-padding) / 2);
+}
+
 .cp_card_base > div > *:not(:last-child) {
+/*    margin-bottom: calc(var(--cp_card-padding) / 2);*/
     margin-bottom: var(--sp_px-m);
+/*    margin-bottom: var(--sp_px-l);*/
+}
+.margin-padding.margin-padding  > *:not(:last-child) {
+    margin-bottom: var(--cp_card-padding);
 }
 
 .internalalign > h4 {
     min-height: calc(1.25em * var(--align-lines-h4));
 }
+
 .internalalign > p {
     min-height: calc(1.5em * var(--align-lines-p));
 }
+
 section:nth-child(6) > ul:last-of-type .cardpadding:first-child {
     min-height: calc(1.5em * var(--align-lines-lead));
     box-sizing: content-box;
 }
-/*===================== card visual styling ===================*/
 
+/*===================== card visual styling ===================*/
+.bgpattern {
+    background: url(../assets/pattern_dot.svg) repeat, var(--nv-16);
+}
 .bg {
     background-color: var(--nv-16);
 }
-
-.bgpattern {
-    background: url(../assets/pattern_dot.svg) repeat, var(--nv-16);
+.bgf7 {
+    background-color: var(--nv-15-5-f7);
 }
 
 .shadow {
     box-shadow: var(--cp_card-shadow);
 }
+.shadow2 {
+    box-shadow: var(--cp_card-shadow2);
+}
+.shadow3 {
+    box-shadow: var(--cp_card-shadow3);
+}
 
 .border {
     border: 1px var(--nv-12-5-cc) solid;
     transition: var(--02transition);
-}
-
-.borderpadding {
-    padding: calc(var(--cp_card-padding) / 2);
 }
 
 .tinted {
@@ -211,6 +244,7 @@ section:nth-child(6) > ul:last-of-type .cardpadding:first-child {
 .frostedshadow {
     position: relative;
 }
+
 .frostedshadow .frosted {
     position: relative;
     z-index: 1;
@@ -232,10 +266,12 @@ section:nth-child(6) > ul:last-of-type .cardpadding:first-child {
 .clearshadow {
     position: relative;
 }
+
 .clearshadow .glass {
     position: relative;
     z-index: 1;
 }
+
 .clearshadow::after {
     content: "";
     display: block;
@@ -260,17 +296,18 @@ section:nth-child(6) > ul:last-of-type .cardpadding:first-child {
     border-bottom: 1px solid var(--nv-9-5-99);
 }
 
-@media (prefers-color-scheme: light) { 
+@media (prefers-color-scheme: light) {
 
-.imagebg:last-of-type .glass {
-    background-color: var(--nv-16);
-    background-clip: padding-box;
-    border: 1px solid transparent;
-    border-image: unset;
-}
-.imagebg:last-of-type   .glass .cp_chip {
-    background-color: var(--nv-15-5-f7);
-}
+    .imagebg:last-of-type .glass {
+        background-color: var(--nv-16);
+        background-clip: padding-box;
+        border: 1px solid transparent;
+        border-image: unset;
+    }
+
+    .imagebg:last-of-type .glass .cp_chip {
+        background-color: var(--nv-15-5-f7);
+    }
 }
 
 
@@ -285,12 +322,47 @@ section:nth-child(6) > ul:last-of-type .cardpadding:first-child {
     background: linear-gradient(to bottom right, rgba(255, 255, 255, 0) 0% 5%, rgba(0, 255, 255, 1) 5% 20%, rgba(255, 255, 255, 1) 20% 40%, yellow 40% 60%, blue 60% 80%, green 80% 100%);
 }
 
+
+/*================= interaction ===================*/
+.hover {
+    transition: var(--02transition);
+    transition-duration: 0.4s;
+    transition-property: transform, box-shadow;
+}
+
+.hover:is(:hover, :focus-within, :focus) {
+    box-shadow: var(--cp_card-shadow-ho-outter), var(--cp_card-shadow-ho-inner);
+    transform: translateY(-2px);
+}
+
+.hover.reversehover:is(:hover, :focus-within, :focus)  {
+    transform: translateY(-2px);
+    box-shadow: var(--cp_card-shadow3-ho);
+}
+
+.glasshover :is(.frosted),
+.frostedshadow.glasshover::after {
+    transition-timing-function: ease-out;
+    transition-duration: 0.3s;
+    transition-property: transform, filter;
+}
+
+.glasshover:is(:hover, :focus-within, :focus) .frosted {
+    transform: translateY(-2px);
+}
+
+.frostedshadow.glasshover:is(:hover, :focus-within, :focus)::after {
+    filter: blur(2px) opacity(70%);
+}
+
+.border:is(:hover, :focus-within, :focus) {
+    border-color: var(--nv-9-5-99);
+}
+
 /*================= card internal layout swap ===================*/
 .hori {
     display: flex;
-    /*    align-items: flex-start;*/
     align-items: stretch;
-    /*    align-items: flex-end;*/
 }
 
 .hori.gap {
@@ -309,49 +381,21 @@ section:nth-child(6) > ul:last-of-type .cardpadding:first-child {
 .hori .two {
     flex: 1 1 auto;
 }
+
 .swap_layout {
     display: var(--swap-layout);
 }
+
 .swap_layout > img {
     flex: 0 1 33%;
     width: var(--swap-imgw);
     aspect-ratio: var(--swap-aspect);
 }
+
 .swap_layout > div {
     flex: 1 0 66%;
 }
 
-/*================= interaction ===================*/
-.hover {
-    /*    box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.15), var(--cp_card-shadow);*/
-    transition: var(--02transition);
-    transition-duration: 0.4s;
-    transition-property: transform, box-shadow;
-}
-
-.hover:is(:hover, :focus-within, :focus) {
-    box-shadow: var(--cp_card-shadowh2), var(--cp_card-shadowh1);
-    transform: translateY(-2px);
-}
-
-.glasshover :is(.frosted),
-.frostedshadow.glasshover::after {
-    transition-timing-function: ease-out;
-    transition-duration: 0.3s;
-    transition-property: transform, filter;
-}
-
-.glasshover:hover .frosted {
-    transform: translateY(-2px);
-}
-
-.frostedshadow.glasshover:hover::after {
-    filter: blur(2px) opacity(70%);
-}
-
-.border:hover {
-    border-color: var(--nv-9-5-99);
-}
 
 /*================= scrolling ===================*/
 
@@ -359,44 +403,46 @@ section:nth-child(6) > ul:last-of-type .cardpadding:first-child {
     :root {
         --cp_card-minw: min(80vw, 300px);
     }
-    body > section:first-child > h3 {
-/*        padding-left: var(--padding-lr);*/
+
+    body > section:first-child > ul {
+        display: flex;
+        max-width: unset;
+        overflow: scroll;
+        scroll-snap-type: x;
+        margin: 0 -10px;
     }
-   body > section:first-child > ul {
-    display: flex;
-    max-width: unset;
-    overflow: scroll;
-    scroll-snap-type: x;
-    margin: 0 -10px;
-}
+
     body > section:first-child > ul li {
-     scroll-snap-align: start;   
+        scroll-snap-align: start;
     }
-    
-    body > section:first-child > ul::before, body > section:first-child > ul::after {
+
+    body > section:first-child > ul::before,
+    body > section:first-child > ul::after {
         content: '';
         display: block;
-/*        width: calc((100vw - var(--wrapper)) / 2 - var(--cp_card-padding));*/
         width: calc((100vw - var(--wrapper)) / 2);
         height: 60px;
-/*        background-color: red;*/
+        /*        background-color: red;*/
         flex: 0 0 auto;
         margin-right: calc(var(--cp_card-padding) * -1);
-        scroll-snap-align: start; 
-    } 
-    
-    
+        scroll-snap-align: start;
+    }
+
+
     body > section:first-child > ul::after {
         margin-left: calc(var(--cp_card-padding) * -1);
         margin-right: unset;
     }
 }
+
 @media screen and (any-hover: none) and (max-width: 639px) {
-     body > section:first-child > ul::before, body > section:first-child > ul::after {
+
+    body > section:first-child > ul::before,
+    body > section:first-child > ul::after {
         content: '';
-         display: block;
-         width: var(--padding-lr);
-    
+        display: block;
+        width: var(--padding-lr);
+
     }
 }
 
