--- a/docs/10_card/css/card.css
+++ b/docs/10_card/css/card.css
@@ -143,7 +143,7 @@ section > ul {
     margin-bottom: var(--cp_card-padding);
 }
 
-section:nth-of-type(5) > ul {
+.col-2 > ul {
     grid-template-columns: var(--2col);
     align-items: normal;
 }
@@ -165,6 +165,7 @@ section > h4 {
 }
 
 .cp_card_base img {
+    width: 100%;
     aspect-ratio: 16 / 9;
     object-fit: cover;
 }
@@ -320,6 +321,15 @@ section:nth-child(6) > ul:last-of-type .cardpadding:first-child {
     /*    background: red;*/
     background: linear-gradient(to bottom right, rgba(255, 255, 255, 0) 0% 25%, rgba(255, 255, 255, 0.6) 25% 50%);
     background: linear-gradient(to bottom right, rgba(255, 255, 255, 0) 0% 5%, rgba(0, 255, 255, 1) 5% 20%, rgba(255, 255, 255, 1) 20% 40%, yellow 40% 60%, blue 60% 80%, green 80% 100%);
+/*    background-repeat: no-repeat;*/
+/*    background-size: 100% 100%;*/
+    
+    transition: background-position 0.2s ease-in-out;
+}
+.test:hover {
+/*    background-size: 100% 50%;*/
+    background-position: 100px 100px;
+/*    background-position: 50% 50%;*/
 }
 
 
@@ -401,7 +411,7 @@ section:nth-child(6) > ul:last-of-type .cardpadding:first-child {
 
 @media screen and (any-hover: none) and (max-width: 1023px) {
     :root {
-        --cp_card-minw: min(80vw, 300px);
+/*        --cp_card-minw: min(80vw, 300px);*/
     }
 
     body > section:first-child > ul {
@@ -414,6 +424,7 @@ section:nth-child(6) > ul:last-of-type .cardpadding:first-child {
 
     body > section:first-child > ul li {
         scroll-snap-align: start;
+        flex: 0 0 min(80vw, 300px);
     }
 
     body > section:first-child > ul::before,
